# tiny-vec

./: Cargo.toml  README  lint.sh
string/: Cargo.toml
string/benches/: bench.rs
string/src/: cow.rs  drain.rs  iter.rs  lib.rs  test.rs
vec/: Cargo.toml
vec/benches/: bench.rs
vec/examples/: collect.rs
vec/src/: cow.rs  drain.rs  extract_if.rs  iter.rs  lib.rs  raw.rs  test.rs
