[package]
name = "tiny-str"
version.workspace = true
edition.workspace = true

description = "Small string optimization"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
license = "GPL-3.0-only"
readme = "../README"
repository = "https://github.com/saulvaldelvira/tiny-vec"

[dependencies.tiny-vec]
path = "../vec"
package = "tiny-vec"
version = ">=0.1.0"
