[package]
name = "tiny-str"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true

description = "Small string optimization"

[dependencies.tiny-vec]
path = "../vec"
package = "tiny-vec"
version = ">=0.1.0"

[features]
default = []
use-specialization = ["tiny-vec/use-specialization"]
