[package]
name = "tiny-str"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true

description = "Small string optimization"

[dependencies.tiny-vec]
path = "../vec"
package = "tiny-vec"
version = ">=0.1.0"
default-features = false

[features]
default = ["alloc"]
alloc = ["tiny-vec/alloc"]
use-nightly-features  = ["tiny-vec/use-nightly-features"]
serde = ["dep:serde"]

[dependencies.serde]
version = ">=1.0.219"
optional = true
default-features = false
