[package]
name = "tiny-vec"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true

description = "Small vector optimization"

[features]
default = ["alloc"]
alloc = []
use-nightly-features = []
serde = ["dep:serde"]

[dependencies.serde]
version = ">=1.0.219"
optional = true
default-features = false
